-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
3
-
9223372036854775807
How to reproduce:
1. enable changelog
2. on client, write c code which calls
setxattr("filename", "system.posix_acl_default", val, 0, 0);
in a loop.
3. run the c code, make sure it's the only op issued to mds.
osd_trans_exec_op() will complain.
We should declare changelog store for system.posix_acl_default and system.posix_acl_access.
- is related to
-
LU-7264 store ChangeLog record for security.* xattr changes
-
- Resolved
-