lustre/mdd/mdd_object.c
@@ -1106,9 +1106,13 @@ static int mdd_declare_xattr_del(const struct lu_env *env,
 	if (rc)
 		return rc;
 
-	/* Only record user xattr changes */
-	if ((strncmp(XATTR_USER_PREFIX, name,
-		     sizeof(XATTR_USER_PREFIX) - 1) == 0))
+	/* Only record system & user xattr changes */
+	if (strncmp(XATTR_USER_PREFIX, name,
+			sizeof(XATTR_USER_PREFIX) - 1) == 0 ||
+		strncmp(POSIX_ACL_XATTR_ACCESS, name,
+			sizeof(POSIX_ACL_XATTR_ACCESS) - 1) == 0 ||
+		strncmp(POSIX_ACL_XATTR_DEFAULT, name,
+			sizeof(POSIX_ACL_XATTR_DEFAULT) - 1) == 0)
 		rc = mdd_declare_changelog_store(env, mdd, NULL, NULL, handle);
 
 	return rc;
